bitnami/cilium/kpt/hubble-ui/ingress.yaml
---
# Source: cilium/charts/cilium/templates/hubble-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  labels:
    k8s-app: hubble-ui
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: cilium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-selfsigned
spec:
  tls:
    - hosts:
      - hubble.k3s.intra
      secretName: ingress-hubble-ui
  rules:
    - host: hubble.k3s.intra
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  name: http
